# blehEngine

./: .gitignore  CMakeLists.txt
gameProject/: CMakeLists.txt  GameManager.h
src/: CMakeLists.txt  Camera.cpp  Camera.h  bleh.cpp  blehEngine.cpp  blehEngine.h  glad.c
src/Services/: AssetLoader.cpp  AssetLoader.h  BlehAsset.h  BlehKeys.h  Event.cpp  Event.h  ImageLoader.h  InputEventSystem.cpp  InputEventSystem.h  InputService.cpp  InputService.h  Model.cpp  Model.h  ModelLoader.h  Window.cpp  Window.h  gltfinformation.h
src/blehMath/: Matrix4.h  Quaternion.h  Vector2.h  Vector3.h  Vector4.h  blehMath.h  blehVector.cpp  blehVector2.cpp  blehVector3.cpp
src/engineResources/shaders/: defaultShader.shader
src/engineResources/temp/: newcube.gltf
src/renderer/: API.h  Buffers.cpp  Buffers.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Triangle.h  VertexArrayObject.cpp  VertexArrayObject.h
src/res/shaders/: defaultShader.shader
vendors/glad/: glad.h
